# NewEPOC

./: .gitignore  pyproject.toml
src/: data.py  deploy.py  model.py  test.py  train.py  utils.py  val.py
src/classifier/: deploy.py  model.py  utils.py
src/features/: wsi_norm.py
src/features/extractor/: feature_extractors.py
src/features/helpers/: background_rejection.py  concurrent_canny_rejection.py  exceptions.py  load_patches.py  load_slides.py  loading_slides.py  stainNorm_Macenko.py  stain_utils.py  utils.py
src/features/normalizer/: normalizer.py  utils.py
tissuemap/: cli.py  config.yaml  open.py  test.py
tissuemap/classifier/: data.py  deploy.py  model.py  train.py
tissuemap/features/: wsi_norm.py
tissuemap/features/extractor/: feature_extractors.py
tissuemap/features/helpers/: load_patches.py  load_slides.py
tissuemap/features/normalizer/: normalizer.py  utils.py
tissuemap/mapper/: visualizer.py
tissuemap/misc/: create_thumbnails.py  embedd_NCT.py  merge_datasets.py  normalize_training_data.py
tissuemap/visualizer/: visualizer.py
